--- a/index.html
+++ b/index.html
@@ -201,11 +201,83 @@
                             
                         </ul>
 
-                        <h5>Skills</h5>
+                        <h5>TECHNICAL SKILLS</h5>
 
-                        <dl class="clearfix">
-                            <dt><h6><i aria-hidden="true" data-icon="&#xe00d;"></i>Web<h6></dt>
+						<dl class="clearfix">
+                            <dt><h6><i aria-hidden="true" data-icon="&#xe00a;"></i>Technologies<h6></dt>
                             <dd></dd>
+                        </dl>
+						<dl class="clearfix">
+                            <dt>Python</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+						<dl class="clearfix">
+                            <dt>Selenium webdriver</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>++</</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>Java</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+								<em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
                         </dl>
                         <dl class="clearfix">
                             <dt>HTML</dt>
@@ -231,24 +303,6 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                            </dd>
-                        </dl>
-                        <dl class="clearfix">
-                            <dt>XML </dt>
-                            <dd>
-                                <b></b>
-                                <b></b>
-                                <b></b>
                                 <b></b>
                                 <b></b>
                                 <em></em>
@@ -260,49 +314,13 @@
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl>
-                        <dl class="clearfix">
-                            <dt>Angular JS</dt>
-                            <dd>
-                                <b></b>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                            </dd>
-                        </dl>
-                         <dl class="clearfix mt20">
-                            <dt><h6><i aria-hidden="true" data-icon="&#xe109;"></i>Scripting<h6></dt>
+                        </dl>					
+                        <dl class="clearfix mt20">
+                            <dt><h6><i aria-hidden="true" data-icon="&#xe00d;"></i>Platforms<h6></dt>
                             <dd></dd>
                         </dl>
-                         <dl class="clearfix">
-                            <dt>PHP</dt>
-                            <dd>
-                                <b></b>
-                                <b></b>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                            </dd>
-                        </dl> 
-                         <dl class="clearfix">
-                            <dt>Python</dt>
+                        <dl class="clearfix">
+                            <dt>Red Hat Linux</dt>
                             <dd>
                                 <b></b>
                                 <b></b>
@@ -311,38 +329,56 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <b></b>
+                                <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl> 
-                        <dl class="clearfix mt20">
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>Windows</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+						<dl class="clearfix mt20">
                             <dt><h6><i aria-hidden="true" data-icon="&#xe109;"></i>Version Control<h6></dt>
                             <dd></dd>
                         </dl>
-                         <dl class="clearfix">
-                            <dt>Git</dt>
-                            <dd>
-                                <b></b>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                            </dd>
-                        </dl> 
                         <dl class="clearfix">
-                            <dt>Subversion</dt>
+                            <dt>GIT</dt>
+                            <dd>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>SVN(tortoise)</dt>
                             <dd>
                                 <b></b>
                                 <b></b>
@@ -351,20 +387,20 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <em></em>
-                                <em></em>
+                                <b></b>
+                                <b></b>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl> 
-                        <dl class="clearfix mt20">
-                            <dt><h6><i aria-hidden="true" data-icon="&#xe00b;"></i>Databases<h6></dt>
+                        </dl>
+						<dl class="clearfix mt20">
+                            <dt><h6><i aria-hidden="true" data-icon="&#xe0e5;"></i>Databases<h6></dt>
                             <dd></dd>
                         </dl>
                         <dl class="clearfix">
-                            <dt>MYSQL</dt>
+                            <dt>MySQL</dt>
                             <dd>
                                 <b></b>
                                 <b></b>
@@ -373,6 +409,46 @@
                                 <b></b>
                                 <b></b>
                                 <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>PostgreSQL</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+						<dl class="clearfix mt20">
+                            <dt><h6><i aria-hidden="true" data-icon="&#xe035;"></i>Project Management Tools<h6></dt>
+                            <dd></dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>JIRA</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
                                 <em></em>
                                 <em></em>
                                 <em></em>
@@ -382,17 +458,89 @@
                             </dd>
                         </dl>
                         <dl class="clearfix mt20">
-                            <dt><h6><i aria-hidden="true" data-icon="&#xe007;"></i>Design Tools<h6></dt>
+                            <dt><h6><i aria-hidden="true" data-icon="&#xe007;"></i>Other Knowledge and Expertise<h6></dt>
                             <dd></dd>
                         </dl>
                         <dl class="clearfix">
-                            <dt>Adobe Photoshop</dt>
+                            <dt>Robot Framework</dt>
                             <dd>
                                 <b></b>
                                 <b></b>
                                 <b></b>
                                 <b></b>
                                 <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>HP Quality Center</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>Review Board</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>Jenkins</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>MPP</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
@@ -402,9 +550,63 @@
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl>
-
+                        </dl>	
+                        <dl class="clearfix">
+                            <dt>UnixShell</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>	
+                        <dl class="clearfix">
+                            <dt>Jenkins</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>		
+                        <dl class="clearfix">
+                            <dt>UML</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>							
                     </div>
+
 
                 </div>
 
