--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <ul>
                             <li class="clearfix">
                                 <div class="con">
-                                    <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Nokia Telecom Product(BTS(3G/LTE),RNC,NetAct)<em>(Linux/SSH/XML/Robot Framework/Java/C++)</em></h3>
+                                    <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Nokia Telecom Product(BTS(3G/LTE),RNC,NetAct)<em>(Python/Linux/SSH/XML/Robot Framework/Java/C++)</em></h3>
                                     <p>Nokia Telecommunication Products</p>
                                 </div>
                                 <!--<a href="javascript:;" class="btn_go btn_green product_1 r5">Read more...<i aria-hidden="true" data-icon="&#x35;"></i></a> -->
