--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>Senior Quality Assurance Engineer / Lanex Corporation</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
-                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Say Hello!</a></p>
+                            <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me!</a></p>
                         </span>
                     </div>
                 </div>
@@ -744,7 +744,8 @@
                     <p class="mt20">Contact Information</p>                 
                     <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
 					<p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
-                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>+639053116925</p>
+                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>Globe: +639053116925</p>
+                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>Smart: +639213722608</p>					
                     <p><i aria-hidden="true" data-icon="&#xe066;"></i>skype:lito@lanexus.com</p>
                     <p class="mt20"><span class="wechat"></span></p>
                 </div>
