--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!--header-->
                 <div class="header clearfix">
                     <div class="avatar">
-                        <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">详细</em></a>
+                        <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">more</em></a>
                         <b class="doing r5">M</b>
                     </div>
                     <div class="base">
