--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </p>
                         <!-- s1~s5 为对应右侧 时间点 -->
                         <p class="desc s5">
-                            &#x21E8; Software Quality Assurance Engineer.
+                            &#x21E8; As a software quality assurance engineer I am responsible in monitoring every phase of the software development process so as to ensure design quality of the product by finding all bug/problem before releasing to the public.
                         </p>
                         <p class="desc s4">
                             &#x21E8; As a R&D engineer for BTS I&V,I am responsible for testing the functionality(recovery area) of WCDMA Network Element,I am using Pegasus as automation tool which is XML base scripting language with python as backend interface towards WCDMA NE.<br>
