--- a/index.html
+++ b/index.html
@@ -325,15 +325,15 @@
                             </dd>
                         </dl>
                         <dl class="clearfix">
-                            <dt>++</</dt>
+                            <dt>XML</</dt>
                             <dd>
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <em></em>
-                                <em></em>
-                                <em></em>
-                                <em></em>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
                                 <em></em>
                                 <em></em>
                                 <em></em>
@@ -349,8 +349,8 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <b></b>
-                                <b></b>
+                                <em></em>
+                                <em></em>
                                 <em></em>
 								<em></em>
                                 <em></em>
@@ -368,8 +368,8 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <em></em>
-                                <em></em>
+                                <b></b>
+                                <b></b>
                                 <em></em>
                                 <em></em>
                                 <em></em>
@@ -385,7 +385,7 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <b></b>
+                                <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
@@ -395,7 +395,25 @@
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl>					
+                        </dl>
+                        <dl class="clearfix">
+                            <dt>C++</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>							
                         <dl class="clearfix mt20">
                             <dt><h6><i aria-hidden="true" data-icon="&#xe00d;"></i>Platforms<h6></dt>
                             <dd></dd>
