--- a/index.html
+++ b/index.html
@@ -289,6 +289,42 @@
                             <dd></dd>
                         </dl>
 						<dl class="clearfix">
+                            <dt>Behat</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+						<dl class="clearfix">
+                            <dt>PHP</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>						
+							<dl class="clearfix">
                             <dt>Python</dt>
                             <dd>
                                 <b></b>
@@ -299,13 +335,13 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <b></b>
-                                <b></b>
+                                <em></em>
+                                <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
                             </dd>
-                        </dl>
+                        </dl>					
 						<dl class="clearfix">
                             <dt>Selenium webdriver</dt>
                             <dd>
