--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
                         <ul>
                             <li class="clearfix">
                                 <div class="con">
+                                    <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Reviewbuzz<em>(Behat/PHP)</em></h3>
+                                    <p>LANEX Philippines</p>
+                                </div>
+						
+                            <li class="clearfix">
+                                <div class="con">
                                     <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Nokia Telecom Product(BTS(3G/LTE),RNC,NetAct)<em>(Python/Linux/SSH/XML/Robot Framework/Java/C++)</em></h3>
                                     <p>Nokia Telecommunication Products</p>
                                 </div>
