--- a/index.html
+++ b/index.html
@@ -295,6 +295,24 @@
                             <dd></dd>
                         </dl>
 						<dl class="clearfix">
+                            <dt>Laravel/dusk</dt>
+                            <dd>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <b></b>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                                <em></em>
+                            </dd>
+                        </dl>
+						<dl class="clearfix">
                             <dt>Behat</dt>
                             <dd>
                                 <b></b>
@@ -303,7 +321,7 @@
                                 <b></b>
                                 <b></b>
                                 <b></b>
-                                <b></b>
+                                <em></em>
                                 <em></em>
                                 <em></em>
                                 <em></em>
