--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <ul>
                             <li class="clearfix">
                                 <div class="con">
-                                    <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Reviewbuzz<em>(PHP/Javascript/Behat)</em></h3>
+                                    <h3><i aria-hidden="true" data-icon="&#x5b;"></i>Reviewbuzz<em>(PHP/Javascript/Vue/Laravel/Dusk/Behat)</em></h3>
                                     <p>LANEX Philippines</p>
                                 </div>
 						
