--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="keywords" content="web developer, software developer, software engineer" />
-        <meta name="description" content="Janzell Jurilla, Software Engineer - Cebu, Philippines" />
+        <meta name="description" content="Lito Dagodog, Software Quality Assurance Engineer - Cebu, Philippines" />
 
         <!--favicon图标-->
         <link rel="icon" href="images/favicon.png" type="image/x-icon" />
@@ -59,7 +59,7 @@
 
                         <h5>Summary</h5>
                         <p class="desc">
-                            &#9679; Has experienced over 8 years as Software Quality Assurance Engineer in Waterfall model and over 5 years in Scrum  methodology.<br>
+                            &#9679; Has experienced over 8 years as Software Quality Assurance Engineer in Waterfall model and over 6 years in Scrum  methodology.<br>
 							&#9679; Has over 12 years of manual and automation testing on Network Management Systems(NMS) software.<br>
 							&#9679; Has over 5 years of software development and test automation involving 4G/LTE technology.<br>
 							&#9679; Has advanced knowledge in SDLC and software testing concepts and has completed the training courses for ISTQB certification.<br>
