--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="keywords" content="web developer, software developer, software engineer" />
+        <meta name="keywords" content="QA Engineer, software QA Engineer" />
         <meta name="description" content="Lito Dagodog, Software Quality Assurance Engineer - Cebu, Philippines" />
 
         <!--favicon图标-->
