--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimal-ui" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="keywords" content="QA Engineer, software QA Engineer" />
-        <meta name="description" content="Lito Dagodog, Software Quality Assurance Engineer - Cebu, Philippines" />
+        <meta name="description" content="Rolan Arjee Tumulak, Software Quality Assurance Engineer - Cebu, Philippines" />
 
         <!--favicon图标-->
         <link rel="icon" href="images/favicon.png" type="image/x-icon" />
@@ -42,8 +42,8 @@
                     </div>
                     <div class="base">
                         <p class="desc">Hello my name is</p>
-                        <h2>Lito Enriquez Dagodog</h2>
-                        <p>Senior Quality Assurance Engineer / Lanex Corporation</p>
+                        <h2>Rolan Arjee Tumulak</h2>
+                        <p>Quality Assurance Engineer / Lanex Corporation</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
                             <p><a href="javascript:;" class="tel_me"><i aria-hidden="true" data-icon="&#xe00b;"></i>Contact Me!</a></p>
@@ -817,14 +817,11 @@
             <div class="tip_avatar_con">
                 <div class="tip_right">
                     <p class="en mt">Hello my name is</p>
-                    <h2>Lito Enriquez Dagodog</h2>
-                    <p>Senior Quality Assurance Engineer</p>
+                    <h2>Rolan Arjee Tumulak</h2>
+                    <p>Quality Assurance Engineer</p>
                     <p class="mt20">Contact Information</p>
-                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@lanexus.com</p>
-					<p><i aria-hidden="true" data-icon="&#xe010;"></i>lito@po.lanex.co.jp</p>
-                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>Globe: +639053116925</p>
-                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>Smart: +639213722608</p>
-                    <p><i aria-hidden="true" data-icon="&#xe066;"></i>skype:lito@lanexus.com</p>
+                    <p><i aria-hidden="true" data-icon="&#xe010;"></i>rolan.tumulak@lanexus.com</p>					                    
+                    <p><i aria-hidden="true" data-icon="&#xe00b;"></i>Sun: +639437277968</p>                    
                     <p class="mt20"><span class="wechat"></span></p>
                 </div>
                 <!--如果依然使用该头像请不要删掉()里的内容-->
